Restructed the folder and Organized Backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=Venom
+DB_HOST=localhost
 DB_USER=root
 DB_PASS=Aankhein@2001
 DB_NAME=kareems
-JWT_SECRET=Kareem@2025
+JWT_SECRET=supersecretstring
